--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,7 @@
 <main>
   <app-top></app-top>
+  <app-trending></app-trending>
+  <app-trailers></app-trailers>
+  <app-popular></app-popular>
+  <app-freetowatch></app-freetowatch>
 </main>
