--- a/src/app/home/top/top.component.html
+++ b/src/app/home/top/top.component.html
@@ -1,4 +1,5 @@
 <section>
+  <div class="overlay"></div>
   <div class="backgroundImages">
     <div class="one"></div>
     <div class="two"></div>
