--- a/src/app/navigation/nav/nav.component.scss
+++ b/src/app/navigation/nav/nav.component.scss
@@ -13,6 +13,7 @@ nav {
   align-items: center;
   justify-content: center;
   padding: 0 40px;
+  z-index: 1000;
   .container {
     max-width: 1300px;
     width: 100%;
@@ -56,11 +57,270 @@ nav {
         cursor: pointer;
       }
       i {
+        font-size: 18px;
+        font-weight: bold;
+        color: $white;
+        cursor: pointer;
+      }
+      i:last-of-type {
+        color: #00aeef;
+      }
+    }
+    .listM {
+      display: none;
+      align-items: center;
+      gap: 26px;
+      .burgerBar {
+        width: 19px;
+        height: 19px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 4px;
+        cursor: pointer;
+        .line {
+          width: 100%;
+          height: 3px;
+          background-color: $white;
+          border-radius: 5px;
+          transition: 0.3s ease;
+        }
+        &.active {
+          .line:nth-child(1) {
+            transform: rotate(45deg) translateY(5px);
+          }
+          .line:nth-child(2) {
+            display: none;
+          }
+          .line:nth-child(3) {
+            transform: rotate(-45deg) translateY(-5px);
+          }
+        }
+      }
+      .logo {
+        img {
+          width: 60px;
+          height: 60px;
+        }
+      }
+    }
+
+    .authM {
+      display: none;
+      align-items: center;
+      gap: 26px;
+      p {
         font-size: 16px;
         font-weight: bold;
         color: $white;
         cursor: pointer;
       }
+      i {
+        font-size: 20px;
+        font-weight: bold;
+        color: $white;
+        cursor: pointer;
+      }
+      i:last-of-type {
+        color: #00aeef;
+      }
     }
+  }
+}
+.mobileMenu {
+  width: 90%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 999;
+  background-color: rgba($color: $primary, $alpha: 0.9);
+  overflow: hidden;
+  backdrop-filter: blur(20px);
+  margin-top: 64px;
+  transition: all 0.3s ease;
+  transform: translateX(-100%);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  padding: 15px;
+  &.active {
+    transform: translateX(0);
+  }
+  .item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 18px;
+    h2 {
+      font-size: 20px;
+      color: $white;
+    }
+    p {
+      font-size: 15px;
+      display: none;
+      color: $white;
+      &.active {
+        display: block;
+      }
+    }
+  }
+  h5 {
+    color: #a2afbb;
+    &:first-of-type {
+      margin-top: 20px;
+    }
+    &:last-of-type {
+      margin-top: 20px;
+    }
+  }
+}
+.search {
+  max-width: 1300px;
+  width: 100%;
+  position: fixed;
+  top: 64px;
+  left: 0;
+  right: 0;
+  padding: 0 40px;
+  background-color: $white;
+  transform: translateY(-150%);
+  transition: all 0.3s ease;
+  z-index: 998;
+  margin: 0 auto;
+  .searchInput {
+    position: relative;
+    width: 100%;
+    height: 44px;
+    i {
+      font-size: 20px;
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    input {
+      width: 100%;
+      height: 100%;
+      border: 0;
+      outline: none;
+      padding-left: 40px;
+      color: #7f8a94;
+      font-size: 16px;
+      &[type="search"]::-webkit-search-cancel-button {
+        display: none;
+      }
+      &[type="search"]::-moz-search-clear {
+        display: none;
+      }
+      &::placeholder {
+        font-size: 16px;
+        color: #a2afbb;
+      }
+    }
+  }
+  .searchResults {
+    width: 100%;
+    .trending {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      padding: 14px 0 0 0;
+      .trend {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        position: relative;
+        gap: 10px;
+        cursor: pointer;
+        margin-bottom: 10px;
+        &::after {
+          content: "";
+          width: 100%;
+          height: 1px;
+          position: absolute;
+          left: 0;
+          right: 0;
+          bottom: -10px;
+          background-color: #dce8f3;
+          border-radius: 5px;
+        }
+        &::before {
+          content: "";
+          width: 100%;
+          height: 1px;
+          position: absolute;
+          left: 0;
+          right: 0;
+          top: -10px;
+          background-color: #dce8f3;
+          border-radius: 5px;
+        }
+      }
+      .trendItem {
+        width: 100%;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        position: relative;
+        gap: 10px;
+        cursor: pointer;
+        transition: 0.3s ease;
+        i {
+          font-size: 14px;
+        }
+        p {
+          font-size: 14px;
+        }
+        &::after {
+          content: "";
+          width: 100%;
+          height: 1px;
+          position: absolute;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background-color: #dce8f3;
+          border-radius: 5px;
+        }
+        &:last-of-type {
+          &::after {
+            width: 0;
+          }
+        }
+        &:hover {
+          background-color: #dce8f3;
+        }
+      }
+    }
+  }
+  &.active {
+    transform: translateY(0);
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  nav {
+    padding: 0 20px;
+    .container {
+      .list {
+        display: none;
+      }
+      .auth {
+        display: none;
+      }
+      .listM {
+        display: flex;
+      }
+      .authM {
+        display: flex;
+      }
+    }
+  }
+  .search {
+    padding: 0 20px;
   }
 }
