--- a/src/app/navigation/nav/nav.component.html
+++ b/src/app/navigation/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav>
   <div class="container">
     <div class="list">
-      <div class="logo">
+      <div class="logo" routerLink="/">
         <h1>DarkMovies</h1>
       </div>
       <div class="categories">
@@ -30,7 +30,7 @@
         <div class="line"></div>
         <div class="line"></div>
       </div>
-      <div class="logo">
+      <div class="logo" routerLink="/">
         <img src="logo.png" alt="" />
       </div>
     </div>
