--- a/src/app/navigation/nav/nav.component.html
+++ b/src/app/navigation/nav/nav.component.html
@@ -5,10 +5,39 @@
         <h1>DarkMovies</h1>
       </div>
       <div class="categories">
-        <p>Movies</p>
-        <p>TV Shows</p>
-        <p>People</p>
-        <p>More</p>
+        <span
+          >Movies
+          <div class="hoverMenuMovie">
+            <span>Popular</span>
+            <span>Now Playing</span>
+            <span>Upcomming</span>
+            <span>Top Rated</span>
+          </div>
+        </span>
+        <span
+          >TV Shows
+          <div class="hoverMenuTv">
+            <span>Popular</span>
+            <span>Airing Today</span>
+            <span>On TV</span>
+            <span>Top Rated</span>
+          </div>
+        </span>
+        <span
+          >People
+          <div class="hoverMenuPeople">
+            <span>Popular People</span>
+          </div>
+        </span>
+        <span
+          >More
+          <div class="hoverMenuMore">
+            <span>Discussions</span>
+            <span>Leaderboard</span>
+            <span>Support</span>
+            <span>Api</span>
+          </div>
+        </span>
       </div>
     </div>
     <div class="auth">
