--- a/src/app/home/trailers/trailers.component.html
+++ b/src/app/home/trailers/trailers.component.html
@@ -29,8 +29,8 @@
       <div class="image">
         <img
           [src]="
-            'https://media.themoviedb.org/t/p/w220_and_h330_face' +
-            item.poster_path
+            'https://media.themoviedb.org/t/p/w1280_and_h720_bestv2' +
+            item.backdrop_path
           "
           alt="Movie Poster"
         />
