--- a/src/app/navigation/footer/footer.component.html
+++ b/src/app/navigation/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<footer>
+  <div class="logo" routerLink="/">
+    <h1>DarkMovies</h1>
+  </div>
+  <div class="copy">
+    <p>Copyright © 2025</p>
+  </div>
+</footer>
