--- a/src/app/navigation/nav/nav.component.html
+++ b/src/app/navigation/nav/nav.component.html
@@ -122,7 +122,7 @@
       @for (item of trendings; track $index) {
       <div class="trendItem">
         <i class="fa-solid fa-magnifying-glass"></i>
-        <p>{{ item.original_title }}</p>
+        <p>{{ item.title }}</p>
       </div>
       }
     </div>
