--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div>
+<div class="main">
   <app-nav></app-nav>
   <router-outlet></router-outlet>
-  <!-- <app-footer></app-footer> -->
+  <app-footer></app-footer>
 </div>
