--- a/src/app/details/details.component.scss
+++ b/src/app/details/details.component.scss
@@ -1,10 +1,464 @@
-div {
-  margin-top: 90px;
+$primary: #032541;
+$white: #fff;
+$black: #000;
+
+section {
+  width: 100%;
+  height: 676px;
+  background-repeat: no-repeat;
+  margin-top: 64px;
+  padding: 30px 40px;
+  background-position: center 46px;
+  position: relative;
+  .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba($color: $primary, $alpha: 0.8);
+  }
+  .params {
+    width: 100%;
+    height: 46px;
+    background-color: $white;
+    z-index: 4;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 28px;
+    span {
+      height: 24px;
+      color: $black;
+      font-size: 15px;
+      cursor: pointer;
+      position: relative;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    i {
+      color: $black;
+      font-size: 12px;
+    }
+    span:nth-child(1) {
+      &:hover {
+        .hoverMenuMovie {
+          display: flex;
+        }
+      }
+    }
+    span:nth-child(2) {
+      &:hover {
+        .hoverMenuTv {
+          display: flex;
+        }
+      }
+    }
+    span:nth-child(3) {
+      &:hover {
+        .hoverMenuPeople {
+          display: flex;
+        }
+      }
+    }
+    span:nth-child(4) {
+      &:hover {
+        .hoverMenuMore {
+          display: flex;
+        }
+      }
+    }
+    .hoverMenuMovie {
+      width: 140px;
+      height: 130px;
+      background-color: $white;
+      box-shadow: 0 0 10px 3px rgba($color: #000000, $alpha: 0.35);
+      display: none;
+      position: absolute;
+      top: 24px;
+      left: 0;
+      flex-direction: column;
+      border-radius: 7px;
+      padding: 7px 0;
+      justify-content: space-between;
+      span {
+        width: 100%;
+        height: 100%;
+        color: $primary;
+        font-size: 12px;
+        transition: 0.3s ease;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        padding-left: 15px;
+        &:hover {
+          background-color: #d2d6da;
+        }
+      }
+    }
+    .hoverMenuTv {
+      width: 140px;
+      height: 130px;
+      background-color: $white;
+      box-shadow: 0 0 10px 3px rgba($color: #000000, $alpha: 0.35);
+      display: none;
+      position: absolute;
+      top: 24px;
+      left: 0;
+      flex-direction: column;
+      border-radius: 7px;
+      padding: 7px 0;
+      justify-content: space-between;
+      span {
+        width: 100%;
+        height: 100%;
+        color: $primary;
+        font-size: 12px;
+        transition: 0.3s ease;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        padding-left: 15px;
+        &:hover {
+          background-color: #d2d6da;
+        }
+      }
+    }
+    .hoverMenuPeople {
+      width: 140px;
+      height: 41px;
+      background-color: $white;
+      box-shadow: 0 0 10px 3px rgba($color: #000000, $alpha: 0.35);
+      display: none;
+      position: absolute;
+      top: 24px;
+      left: 0;
+      flex-direction: column;
+      border-radius: 7px;
+      padding: 7px 0;
+      justify-content: space-between;
+      span {
+        width: 100%;
+        height: 100%;
+        color: $primary;
+        font-size: 12px;
+        transition: 0.3s ease;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        padding-left: 15px;
+        &:hover {
+          background-color: #d2d6da;
+        }
+      }
+    }
+    .hoverMenuMore {
+      width: 140px;
+      height: 130px;
+      background-color: $white;
+      box-shadow: 0 0 10px 3px rgba($color: #000000, $alpha: 0.35);
+      display: none;
+      position: absolute;
+      top: 24px;
+      left: 0;
+      flex-direction: column;
+      border-radius: 7px;
+      padding: 7px 0;
+      justify-content: space-between;
+      span {
+        width: 100%;
+        height: 100%;
+        color: $primary;
+        font-size: 12px;
+        transition: 0.3s ease;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        padding-left: 15px;
+        &:hover {
+          background-color: #d2d6da;
+        }
+      }
+    }
+  }
+  .content {
+    max-width: 1300px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 30px;
+    margin-top: 46px;
+    overflow: hidden;
+    .poster {
+      width: 100%;
+      flex: 1;
+      z-index: 3;
+      img {
+        width: 300px;
+        height: 450px;
+        border-radius: 10px;
+      }
+    }
+    .info {
+      width: 100%;
+      flex: 2.5;
+      z-index: 3;
+      .title {
+        h1 {
+          color: $white;
+          font-size: 34px;
+          span {
+            font-weight: lighter;
+            color: #d2d6da;
+          }
+        }
+      }
+      .addInfo {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        span {
+          color: $white;
+          font-size: 15px;
+        }
+        .date {
+          display: flex;
+          align-items: center;
+          gap: 4px;
+        }
+        .genres {
+          display: flex;
+          align-items: center;
+          span {
+            padding-left: 5px;
+          }
+          p {
+            color: $white;
+          }
+        }
+        .duration {
+          display: flex;
+          align-items: center;
+          gap: 5px;
+        }
+      }
+      .rate {
+        position: relative;
+        margin-top: 20px;
+        .rating {
+          width: 60px;
+          height: 60px;
+          border-radius: 50%;
+          background-color: $primary;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: absolute;
+          .progressBar {
+            width: 90%;
+            height: 90%;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .percent {
+              display: flex;
+              align-items: flex-start;
+              position: relative;
+              p {
+                font-size: 22px;
+                color: $white;
+                font-weight: bold;
+              }
+              span {
+                position: absolute;
+                font-size: 10px;
+                color: $white;
+                top: 1px;
+                right: -8px;
+              }
+            }
+          }
+          .progress {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scaleX(-1);
+            .circular-chart {
+              width: 100%;
+              height: 100%;
+              transform: rotate(1deg);
+            }
+            .circle-bg {
+              stroke: transparent;
+              stroke-width: 3;
+            }
+            .circle {
+              transition: stroke-dasharray 0.5s ease;
+              stroke-linecap: round;
+              stroke-width: 3;
+            }
+          }
+        }
+        .test {
+          height: 60px;
+          span {
+            color: $white;
+          }
+        }
+      }
+      .favorites {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 30px;
+        margin-top: 10px;
+        .fav {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 20px;
+          div {
+            width: 46px;
+            height: 46px;
+            border-radius: 50%;
+            background-color: $primary;
+            cursor: pointer;
+            transition: 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            i {
+              color: $white;
+              font-size: 14px;
+            }
+            &:hover {
+              transform: scale(1.12);
+            }
+          }
+        }
+        .playTrailer {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          cursor: pointer;
+          transition: 0.3s ease;
+          i {
+            color: $white;
+          }
+          span {
+            color: $white;
+            font-weight: bold;
+          }
+          &:hover {
+            transform: scale(1.12);
+          }
+        }
+      }
+      .quote {
+        margin-top: 30px;
+        span {
+          color: #d2d6da;
+        }
+      }
+      .overview {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-top: 20px;
+        gap: 10px;
+        h2 {
+          color: $white;
+        }
+        p {
+          color: $white;
+          line-height: 22px;
+          font-size: 15px;
+        }
+      }
+      .crew {
+        width: 100%;
+        height: 200px;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        gap: 20px;
+        margin-top: 30px;
+        overflow-y: auto;
+        div {
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+          span:first-of-type {
+            color: $white;
+            font-weight: bold;
+          }
+          span:last-of-type {
+            color: $white;
+            font-size: 13px;
+          }
+        }
+      }
+    }
+  }
+}
+
+.modal {
+  width: 90%;
+  height: 85%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1010;
+  background-color: $primary;
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  padding: 0 40px;
-  img {
-    width: 200px;
+  justify-content: space-between;
+  border-radius: 10px;
+
+  div {
+    width: 100%;
+    height: 65px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 30px;
+    h2 {
+      color: $white;
+    }
+    i {
+      color: $white;
+      cursor: pointer;
+      font-size: 22px;
+      transition: 0.3s ease;
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
   }
+  iframe {
+    border-radius: 0 0 10px 10px;
+  }
+}
+.overlay2 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba($color: #000000, $alpha: 0.5);
+  z-index: 1009;
 }
