--- a/src/app/home/trailers/trailers.component.scss
+++ b/src/app/home/trailers/trailers.component.scss
@@ -4,7 +4,7 @@ $white: #fff;
 section {
   max-width: 1300px;
   width: 100%;
-  height: 450px;
+  height: 400px;
   margin: 0 auto;
   background-color: $primary;
   padding: 30px 40px;
@@ -75,7 +75,7 @@ section {
   }
   .movies {
     width: 100%;
-    min-height: 380px;
+    min-height: 335px;
     display: flex;
     align-items: center;
     gap: 20px;
@@ -89,7 +89,7 @@ section {
       border-radius: 10px;
     }
     .movieCard {
-      width: 150px;
+      width: 300px;
       animation: smoothAppear 1.5s ease;
       position: relative;
       cursor: pointer;
@@ -100,7 +100,7 @@ section {
         overflow: hidden;
         border-radius: 8px;
         img {
-          width: 150px;
+          width: 300px;
           border-radius: 8px;
           transition: 0.3s ease;
         }
@@ -126,7 +126,7 @@ section {
         .playWatch {
           display: none;
           position: absolute;
-          top: 150px;
+          top: 125px;
           left: 50%;
           transform: translateX(-50%);
           color: $white;
@@ -137,12 +137,17 @@ section {
       .text {
         height: 30px;
         padding: 12px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         h5 {
           color: $white;
+          font-size: 16px;
+          text-align: center;
         }
         span {
           font-weight: lighter;
-          font-size: 14px;
+          font-size: 15px;
           margin-top: 8px;
           color: #b1c2d1;
         }
