--- a/src/app/navigation/nav/nav.component.scss
+++ b/src/app/navigation/nav/nav.component.scss
@@ -100,7 +100,7 @@ nav {
             justify-content: flex-start;
             padding-left: 15px;
             &:hover {
-              background-color: #dee2e6;
+              background-color: #d2d6da;
             }
           }
         }
@@ -128,7 +128,7 @@ nav {
             justify-content: flex-start;
             padding-left: 15px;
             &:hover {
-              background-color: #dee2e6;
+              background-color: #d2d6da;
             }
           }
         }
@@ -156,7 +156,7 @@ nav {
             justify-content: flex-start;
             padding-left: 15px;
             &:hover {
-              background-color: #dee2e6;
+              background-color: #d2d6da;
             }
           }
         }
@@ -184,7 +184,7 @@ nav {
             justify-content: flex-start;
             padding-left: 15px;
             &:hover {
-              background-color: #dee2e6;
+              background-color: #d2d6da;
             }
           }
         }
